# inkpad

./: CMakeLists.txt  INSTALL  README  data.cpp  data.h  file.cpp  file.h  inkpad.cbp  inkpad.layout  input.cpp  input.h  main.cpp  output.cpp  output.h  ustd.h
archive/: Gtk2_routines.pl  inkpad_import.pl
archive/engines/: find.pm  input.pm  output.pm  process.pm
doc/file formats/: ACECAD digital page file (DHW).odt
other/: 95-inkpad.rules  De Standaard.pl
scripts/: Gtk2_routines.pm  inkpad_import.pl
scripts/engines/: find.pm  input.pm  output.pm  process.pm
src/: CMakeLists.txt  data.cpp  data.h  exception.cpp  exception.h  file.cpp  file.h  generic.cpp  generic.h  input.cpp  input.h  main.cpp  multithread.cpp  multithread.h  output.cpp  output.h  render.cpp  render.h  threading.cpp  threading.h  ustd.cpp  ustd.h
tests/: CMakeLists.txt  drawing.top
tests/ustd/: CMakeLists.txt  README  benchmark.pl  main.cpp  plot.gp  ustd.cbp
